implement genaratePaymentId method in paymentController,paymentServiceImpl classes,paymentService,paymentRepo interfaces in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
@@ -282,10 +282,8 @@
         <div class="modal-body">
           <form class="row g-3">
             <div class="col-md-6">
-              <label for="inputState" class="form-label">Rent ID</label>
-              <select id="inputState" class="form-select">
-                <option></option>
-              </select>
+              <label for="selectUserRentId" class="form-label">Rent ID</label>
+              <select id="selectUserRentId" class="form-select"></select>
             </div>
             <div class="col-md-6">
               <label for="inputRentDate" class="form-label">Rent Date</label>
@@ -359,7 +357,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-dark">Remove Booking</button>
+          <button type="button" class="btn btn-dark" id="btnRemoverUserRent">Remove Booking</button>
         </div>
       </div>
     </div>
