implement clearPaymentFielsd, bind click eventTo refreshPaymentButton method in adminDashboardController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -956,7 +956,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <div class="col-9 d-grid mt-4 gap-2 d-md-flex justify-content-md-end">
-                                        <button class="btn fs-5 me-3 btn-dark"  type="button">Payed</button>
+                                        <button class="btn fs-5 me-3 btn-dark" type="button" id="btnPaymentPayed">Payed</button>
                                     </div>
                                 </div>
                             </form>
