implement getAllPaymentsByDaily method in paymentController,paymentServiceImpl classes,paymentService,paymentRepo interfaces in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -944,7 +944,7 @@
                                 </div>
                                 <div class="col-md-3">
                                     <label for="inputTotalPayment" class="form-label">Total Payment</label>
-                                    <input type="number" class="form-control" id="inputTotalPayment" readonly>
+                                    <input type="number" class="form-control" id="inputTotalPayment" readonly style="color: blue">
                                 </div>
                                 <div class="col-md-2">
                                     <label class="form-label" for="inputDamageCharge">Damage Charge</label>
@@ -952,7 +952,7 @@
                                 </div>
                                 <div class="col-md-3">
                                     <label for="inputReturnLossDamageWaiver" class="form-label">Return Loss Damage Waiver</label>
-                                    <input class="form-control" id="inputReturnLossDamageWaiver" type="number" readonly>
+                                    <input class="form-control" id="inputReturnLossDamageWaiver" type="number" readonly style="color:blue">
                                 </div>
                                 <div class="col-md-2">
                                     <div class="col-9 d-grid mt-4 gap-2 d-md-flex justify-content-md-end">
