implement loadAllDailyIncome method in adminDashboardController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -1159,7 +1159,7 @@
                                         <th scope="col">Total Income</th>
                                     </tr>
                                     </thead>
-                                    <tbody></tbody>
+                                    <tbody id="tblDailyIncome"></tbody>
                                 </table>
                             </div>
                         </div>
