implement addPayment,updateRentStatus,Update Dtiver and Car Availability methods in paymentController,paymentServiceImpl classes,paymentService,paymentRepo interfaces in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -1177,7 +1177,7 @@
                                         <th scope="col">Total Income</th>
                                     </tr>
                                     </thead>
-                                    <tbody></tbody>
+                                    <tbody id="tblWeeklyIncome"></tbody>
                                 </table>
                             </div>
                         </div>
@@ -1195,7 +1195,7 @@
                                         <th scope="col">Total Income</th>
                                     </tr>
                                     </thead>
-                                    <tbody></tbody>
+                                    <tbody id="tblMonthlyIncome"></tbody>
                                 </table>
                             </div>
                         </div>
@@ -1203,7 +1203,7 @@
                     <div class="col-6">
                         <div class="row mt-3 ms-2"style="background-color: #cbcbcb;border-radius: 10px">
                             <div class="col-12">
-                                <label class="fs-5" style="width: max-content;"> Yearly Income </label>
+                                <label class="fs-5" style="width: max-content;"> Annually Income </label>
                             </div>
                             <div class="col-12" style="overflow:scroll;height:255px;overflow:auto">
                                 <table class="table table-secondary mt-3">
@@ -1213,7 +1213,7 @@
                                         <th scope="col">Total Income</th>
                                     </tr>
                                     </thead>
-                                    <tbody></tbody>
+                                    <tbody id="tblAnnuallyIncome"></tbody>
                                 </table>
                             </div>
                         </div>
