--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -1338,11 +1338,10 @@
     </div>
     <!---------------------- car booking model end--------------------------------->
 </main>
-
-<script src="../assests/js/bootstrap.min.js"></script>
-<script src="../assests/JQuery/jquery-3.6.1.min.js">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
 <script src="../controllers/RentCarController.js"></script>
+<script src="../assests/js/bootstrap.min.js"></script>
 <script src="../controllers/generalCars.js"></script>
 <script src="../controllers/UserDashboardController.js"></script>
 
