implement add Validation signUpform in signUpController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
@@ -149,7 +149,8 @@
                         </div>
                         <div class="col-md-6">
                             <label for="inputUsername" class="form-label">Username</label>
-                            <input type="text" class="form-control" id="inputUsername">
+                            <input type="text" class="form-control" id="inputUsername" aria-describedby="unHelp">
+                            <div id="unHelp" class="form-text">Use 5 or more characters with a mix of letters, numbers</div>
                         </div>
                         <div class="col-md-6">
                             <label class="form-label" for="inputPassword">Password</label>
