--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
@@ -1123,9 +1123,9 @@
     <!---------------------- car booking model end--------------------------------->
 </main>
 
-<script src="../assests/js/bootstrap.min.js"></script>
-<script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
+<script src="../assests/js/bootstrap.min.js"></script>
 <script src="../controllers/premiumCars.js"></script>
 <script src="../controllers/UserDashboardController.js"></script>
 <script src="../controllers/RentCarController.js"></script>
