add Validation to cars  in adminDashboardController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -350,23 +350,26 @@
                                 <div class="col-md-2">
                                     <label class="form-label" for="selectType">Type</label>
                                     <select class="form-select" id="selectType" aria-label="Default select example">
-                                        <option value="1">General</option>
-                                        <option value="2">Premium</option>
-                                        <option value="3">Luxury</option>
+                                        <option value="1">- Select Car Type -</option>
+                                        <option value="2">General</option>
+                                        <option value="3">Premium</option>
+                                        <option value="4">Luxury</option>
                                     </select>
                                 </div>
                                 <div class="col-md-2">
                                     <label for="selectTransmissionType" class="form-label">Transmission Type</label>
                                     <select class="form-select" id="selectTransmissionType" aria-label="Default select example">
-                                        <option value="1">Auto</option>
-                                        <option value="2">Manual</option>
+                                        <option value="1">- Select Transmission -</option>
+                                        <option value="2">Auto</option>
+                                        <option value="3">Manual</option>
                                     </select>
                                 </div>
                                 <div class="col-md-2">
                                     <label class="form-label" for="selectFuelType">Fuel Type</label>
                                     <select class="form-select" id="selectFuelType" aria-label="Default select example">
-                                        <option value="1">Petrol</option>
-                                        <option value="2">Diesel</option>
+                                        <option value="1">- Select Fuel Type -</option>
+                                        <option value="2">Petrol</option>
+                                        <option value="3">Diesel</option>
                                     </select>
                                 </div>
                                 <div class="col-md-2">
